// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <div
    aria-live="polite"
    className="heading"
  >
    Saved Payments
    <div
      aria-label="You have 1 saved payments."
      aria-live="polite"
    />
  </div>
  <div
    className="content"
  >
    <mock-PaymentCard
      details={
        Object {
          "expirationDate": "12/12/2022",
          "maskedCC": "1234",
          "type": "VI",
        }
      }
      payment_method_code="braintree"
      public_hash="78asfg87ibafv"
    />
  </div>
  <div
    className="noPayments"
  />
</div>
`;

exports[`renders correctly when there are no existing saved payments 1`] = `
<div
  className="root"
>
  Title
  <div
    aria-live="polite"
    className="heading"
  >
    Saved Payments
    <div
      aria-label="You have no saved payments."
      aria-live="polite"
    />
  </div>
  <div
    className="content"
  />
  <div
    className="noPayments"
  >
    You have no saved payments.
  </div>
</div>
`;

exports[`renders loading indicator when isLoading is true 1`] = `
<div
  className="global"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={64}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={64}
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="12"
        x2="12"
        y1="2"
        y2="6"
      />
      <line
        x1="12"
        x2="12"
        y1="18"
        y2="22"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="4.93"
        y2="7.76"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="16.24"
        y2="19.07"
      />
      <line
        x1="2"
        x2="6"
        y1="12"
        y2="12"
      />
      <line
        x1="18"
        x2="22"
        y1="12"
        y2="12"
      />
      <line
        x1="4.93"
        x2="7.76"
        y1="19.07"
        y2="16.24"
      />
      <line
        x1="16.24"
        x2="19.07"
        y1="7.76"
        y2="4.93"
      />
    </svg>
  </span>
  <span
    className="message"
  >
    <mock-FormattedMessage
      defaultMessage="Fetching Data..."
      id="loadingIndicator.message"
    />
  </span>
</div>
`;
